--- a/css/style.css
+++ b/css/style.css
@@ -70,3 +70,73 @@ h1, h2, h3, h4, h5, h6 {
   font-size: inherit;
   font-weight: 400;
 }
+
+body {
+  height: 100%;
+  line-height: 1;
+  font-family: Rubik;
+  font-size: 12px;
+  color: #616161;
+}
+
+.wrapper {
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
+}
+
+.main {
+  flex: 1 1 auto;
+}
+
+[class*=__container] {
+  max-width: 1057px;
+  margin: 0 auto;
+}
+
+.header__container {
+  display: flex;
+  min-height: 114px;
+  align-items: center;
+}
+
+.header__menu {
+  flex: 1 1 auto;
+}
+
+.header__button {
+  flex: 0 0 252px;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.menu {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.menu__list {
+  display: flex;
+}
+
+.button {
+  color: #FCFDFE;
+  height: 40px;
+  width: 130px;
+  left: 979px;
+  top: 37px;
+  border-radius: 5px;
+  display: flex;
+  justify-content: center;
+  padding: 14px;
+  font-family: Raleway;
+  font-weight: 800;
+}
+.button :hover {
+  background-color: #616161;
+}
+
+.button_blue {
+  background-color: #4285F4;
+}
