--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,1 +1,77 @@
 @import "_stylereset";
+
+body{
+   height: 100%;
+   line-height: 1;
+   font-family: Rubik;
+   font-size: 12px;
+   color: #616161;
+}
+
+.wrapper {
+   overflow: hidden;
+   display: flex;
+   flex-direction: column;
+   min-height: 100%;
+}
+
+.main{
+   flex: 1 1 auto;
+}
+
+[class*="__container"]{
+   max-width: 1057px;
+   margin: 0 auto;
+}
+
+.header {
+}
+.header__container {
+   display: flex;
+   min-height: 114px;
+   align-items: center;
+}
+.header__logo {
+}
+.header__menu {
+   flex: 1 1 auto;
+}
+
+.header__button {
+   flex: 0 0 252px;
+   display: flex;
+   justify-content: flex-end;
+}
+.menu {
+   display: flex;
+   justify-content: flex-end;
+}
+.menu__list {
+   display: flex;
+}
+.menu__item {
+}
+.menu__link {
+}
+
+.button {
+   color: #FCFDFE;
+   height: 40px;
+   width: 130px;
+   left: 979px;
+   top: 37px;
+   border-radius: 5px;
+   display: flex;
+   justify-content: center;
+   padding: 14px;
+   font-family: Raleway;
+   font-weight: 800;
+   :hover {
+      background-color: #616161;
+   }
+}
+
+.button_blue {
+   background-color: #4285F4;
+
+}
