--- a/css/style.css
+++ b/css/style.css
@@ -114,10 +114,22 @@ body {
 .menu {
   display: flex;
   justify-content: flex-end;
+  padding: 0 40px 0 0;
 }
 
 .menu__list {
   display: flex;
+  gap: 40px;
+}
+
+.menu__link {
+  font-family: "Raleway";
+  font-weight: 700;
+  font-size: 10px;
+  line-height: 12px;
+  letter-spacing: 0.14em;
+  color: #000000;
+  text-transform: uppercase;
 }
 
 .button {
@@ -132,6 +144,9 @@ body {
   padding: 14px;
   font-family: Raleway;
   font-weight: 800;
+  letter-spacing: 0.14em;
+  text-transform: uppercase;
+  background-color: #EC5863;
 }
 .button :hover {
   background-color: #616161;
