--- a/scss/style.scss
+++ b/scss/style.scss
@@ -45,13 +45,23 @@ body{
 .menu {
    display: flex;
    justify-content: flex-end;
+   padding: 0 40px 0 0 ;
 }
 .menu__list {
    display: flex;
+   gap: 40px;
+
 }
 .menu__item {
 }
 .menu__link {
+   font-family: 'Raleway';
+   font-weight: 700;
+   font-size: 10px;
+   line-height: 12px;
+   letter-spacing: 0.14em;
+   color: #000000;
+   text-transform: uppercase;
 }
 
 .button {
@@ -66,6 +76,9 @@ body{
    padding: 14px;
    font-family: Raleway;
    font-weight: 800;
+   letter-spacing: 0.14em;
+   text-transform: uppercase;
+   background-color: #EC5863;
    :hover {
       background-color: #616161;
    }
