--- a/css/style.css
+++ b/css/style.css
@@ -123,6 +123,21 @@ body {
     flex: 0 0 40px;
     overflow: hidden;
   }
+  [class*=__container] .menu {
+    overflow: hidden;
+  }
+}
+@media (max-width: 320px) {
+  [class*=__container] {
+    max-width: none;
+  }
+  [class*=__container] .header__button {
+    flex: 0 0 85px;
+  }
+  [class*=__container] .header__logo {
+    flex: 0 0 40px;
+    overflow: hidden;
+  }
 }
 .header {
   position: absolute;
@@ -317,17 +332,7 @@ body {
   max-width: 410px;
 }
 
-.block-text__title {
-  font-family: "Rubik";
-  font-style: normal;
-  font-weight: 700;
-  font-size: 44px;
-  line-height: 126%;
-  color: #000000;
-  margin: 0 0 15px 0;
-}
-
-.pink span {
+.block-text__title_pink span {
   color: #EC5863;
 }
 
@@ -340,4 +345,228 @@ body {
   text-align: left;
   color: #616161;
   margin: 0 0 24px 0;
+}
+
+.experts {
+  background-color: #FAFBFD;
+  padding: 105px 0 116px 0px;
+}
+
+.statistics-experts {
+  max-width: 655px;
+  margin: 0 auto;
+  position: relative;
+}
+
+.statistics-experts__body {
+  background-color: #FFFFFF;
+  box-shadow: 0px 2px 24px rgba(88, 126, 236, 0.15);
+  border-radius: 16px;
+  position: relative;
+  z-index: 2;
+}
+
+.statistics-experts__decor {
+  position: absolute;
+  background-color: #EC5863;
+  border-radius: 30px;
+}
+
+.statistics-experts__decor_1 {
+  width: 65px;
+  height: 65px;
+  transform: rotate(-30deg);
+  bottom: -20px;
+  left: -15px;
+  border-radius: 16px;
+}
+
+.statistics-experts__decor_2 {
+  width: 96px;
+  height: 96px;
+  transform: rotate(105deg);
+  top: -40px;
+  left: 210px;
+  right: 325px;
+  border-radius: 30px;
+}
+
+.statistics-experts__decor_3 {
+  width: 127px;
+  height: 127px;
+  transform: rotate(-30deg);
+  right: -50px;
+  top: 0px;
+  bottom: -35px;
+  border-radius: 30px;
+}
+
+.body-statistics-experts {
+  padding: 30px 80px 30px 80px;
+  width: 655px;
+  height: 115px;
+  display: flex;
+  align-items: center;
+}
+
+.body-statistics-experts__item {
+  width: 33%;
+}
+
+.body-statistics-experts__value {
+  font-family: "Rubik";
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 43px;
+  align-items: center;
+  text-align: center;
+  letter-spacing: 0.14em;
+  color: #EC5863;
+}
+
+.body-statistics-experts__text {
+  font-family: "Rubik";
+  font-weight: 700;
+  font-size: 11px;
+  line-height: 13px;
+  align-items: center;
+  letter-spacing: 0.37em;
+  text-transform: uppercase;
+  color: #000000;
+  text-align: center;
+}
+
+.experts__talk {
+  display: flex;
+  align-items: center;
+}
+
+.block-text__title_violet span {
+  color: #587EEC;
+}
+
+.experts__content {
+  width: 35%;
+  padding: 105px 0px 115px 0;
+  min-width: 400px;
+  margin: 105px 75px 0 15px;
+}
+
+.experts__video {
+  width: 65%;
+  background: #FFFFFF;
+  box-shadow: 0px 4px 18px rgba(88, 126, 236, 0.18);
+  border-radius: 8px;
+  width: 520px;
+  height: 285px;
+  margin: 55px 0 0 0;
+}
+
+.healthcare__fingertips {
+  display: flex;
+  text-align: center;
+  padding: 80px 190px 45px 190px;
+}
+
+.block-text__text_center {
+  text-align: center;
+}
+
+.healthcare-tips-body {
+  display: flex;
+  margin: 0 -5px;
+}
+
+.healthcare-tips-body__item {
+  z-index: 1;
+  background: #FFFFFF;
+  box-shadow: 0px 4px 18px rgba(88, 126, 236, 0.18);
+  border-radius: 8px;
+  width: 280px;
+  height: 280px;
+  justify-content: center;
+  position: relative;
+  padding: 25px 36px 25px 35px;
+  flex: 1 1 auto;
+}
+
+.healthcare-tips-body__item_item-1 {
+  margin: 0 35px 75px 0;
+}
+
+.healthcare-tips-body__item_item-2 {
+  margin: 0 35px 75px 35px;
+}
+
+.healthcare-tips-body__item_item-3 {
+  margin: 0 0 75px 35px;
+}
+
+.item__icon {
+  text-align: center;
+  padding: 35px 0 55px 0;
+}
+
+.item__title {
+  font-family: "Rubik";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 138.5%;
+  text-align: center;
+  letter-spacing: 0.08em;
+  color: #000000;
+  padding: 0 0 5px 0;
+}
+
+.item__text {
+  font-family: "Rubik";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 138.5%;
+  text-align: center;
+  letter-spacing: 0.08em;
+  color: #616161;
+}
+
+.healthcare-tips-body__decor-1 {
+  z-index: 2;
+  position: relative;
+  width: 65px;
+  height: 65px;
+  transform: rotate(-30deg);
+  bottom: -20px;
+  left: -15px;
+  border-radius: 16px;
+  background-color: #EC5863;
+}
+
+.healthcare-tips-body__decor-2 {
+  z-index: 2;
+  position: relative;
+}
+
+.healthcare-tips-body__decor-3 {
+  z-index: 2;
+  position: relative;
+}
+
+.healthcare-tips-body__decor-4 {
+  z-index: 2;
+  position: relative;
+}
+
+.icons-mobile {
+  display: flex;
+  justify-content: center;
+  margin: 0 0 40px 0;
+}
+
+.mobile-icons_andriod {
+  margin: 7px 27px 3px 0;
+}
+
+.mobile-icons_apple {
+  margin: 0 0 0 27px;
 }
