--- a/css/style.css
+++ b/css/style.css
@@ -253,7 +253,6 @@ body {
   font-weight: 400;
   line-height: 17px;
   letter-spacing: 0.08em;
-  text-align: left;
   color: #616161;
   margin: 0 0 24px 0;
 }
@@ -334,17 +333,6 @@ body {
 
 .block-text__title_pink span {
   color: #EC5863;
-}
-
-.block-text__text {
-  font-family: Rubik;
-  font-size: 12px;
-  font-weight: 400;
-  line-height: 17px;
-  letter-spacing: 0.08em;
-  text-align: left;
-  color: #616161;
-  margin: 0 0 24px 0;
 }
 
 .experts {
@@ -445,7 +433,13 @@ body {
   color: #587EEC;
 }
 
+.experts__talk {
+  display: flex;
+  align-items: center;
+}
+
 .experts__content {
+  flex: 0 1 50%;
   width: 35%;
   padding: 105px 0px 115px 0;
   min-width: 400px;
@@ -453,6 +447,7 @@ body {
 }
 
 .experts__video {
+  flex: 0 1 50%;
   width: 65%;
   background: #FFFFFF;
   box-shadow: 0px 4px 18px rgba(88, 126, 236, 0.18);
@@ -460,103 +455,34 @@ body {
   width: 520px;
   height: 285px;
   margin: 55px 0 0 0;
+  padding: 0 0 25% 0;
+  position: relative;
 }
 
-.healthcare__fingertips {
-  display: flex;
-  text-align: center;
-  padding: 80px 190px 45px 190px;
-}
-
-.block-text__text_center {
-  text-align: center;
-}
-
-.healthcare-tips-body {
-  display: flex;
-  margin: 0 -5px;
-}
-
-.healthcare-tips-body__item {
-  z-index: 1;
-  background: #FFFFFF;
-  box-shadow: 0px 4px 18px rgba(88, 126, 236, 0.18);
+.experts__video iframe {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
   border-radius: 8px;
-  width: 280px;
-  height: 280px;
-  justify-content: center;
-  position: relative;
-  padding: 25px 36px 25px 35px;
-  flex: 1 1 auto;
 }
 
-.healthcare-tips-body__item_item-1 {
-  margin: 0 35px 75px 0;
+@media (max-width: 760px) {
+  .experts {
+    padding: 105px 0 116px 0px;
+  }
+  .experts__talk {
+    align-items: stretch;
+    flex-direction: column;
+  }
+  .experts__video {
+    padding: 0 0 60% 0;
+  }
+  .experts__content {
+    padding: 0;
+    margin-bottom: 30px;
+  }
 }
-
-.healthcare-tips-body__item_item-2 {
-  margin: 0 35px 75px 35px;
-}
-
-.healthcare-tips-body__item_item-3 {
-  margin: 0 0 75px 35px;
-}
-
-.item__icon {
-  text-align: center;
-  padding: 35px 0 55px 0;
-}
-
-.item__title {
-  font-family: "Rubik";
-  font-style: normal;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 138.5%;
-  text-align: center;
-  letter-spacing: 0.08em;
-  color: #000000;
-  padding: 0 0 5px 0;
-}
-
-.item__text {
-  font-family: "Rubik";
-  font-style: normal;
-  font-weight: 400;
-  font-size: 12px;
-  line-height: 138.5%;
-  text-align: center;
-  letter-spacing: 0.08em;
-  color: #616161;
-}
-
-.healthcare-tips-body__decor-1 {
-  z-index: 2;
-  position: relative;
-  width: 65px;
-  height: 65px;
-  transform: rotate(-30deg);
-  bottom: -20px;
-  left: -15px;
-  border-radius: 16px;
-  background-color: #EC5863;
-}
-
-.healthcare-tips-body__decor-2 {
-  z-index: 2;
-  position: relative;
-}
-
-.healthcare-tips-body__decor-3 {
-  z-index: 2;
-  position: relative;
-}
-
-.healthcare-tips-body__decor-4 {
-  z-index: 2;
-  position: relative;
-}
-
 .icons-mobile {
   display: flex;
   justify-content: center;
@@ -569,4 +495,78 @@ body {
 
 .mobile-icons_apple {
   margin: 0 0 0 27px;
+}
+
+.block-text_center {
+  text-align: center;
+}
+
+.block-text__text_mw {
+  max-width: 600px;
+  margin: 0 auto;
+}
+
+.healthcare__block-text {
+  margin: 0 0 45px 0;
+}
+
+.healthcare__items {
+  display: flex;
+  max-width: 980px;
+  margin: 0 auto;
+  gap: 72px;
+}
+
+.healthcare__item {
+  flex: 0 1 33%;
+}
+
+.item-healthcare {
+  position: relative;
+  background: #FFFFFF;
+  box-shadow: 0px 4px 18px rgba(88, 126, 236, 0.18);
+  border-radius: 8px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 36px 17px;
+  text-align: center;
+}
+
+.item-healthcare__icon {
+  margin: 0 0 58px 0;
+}
+
+.item-healthcare__title {
+  font-weight: 700;
+  font-size: 16px;
+  color: #000000;
+  letter-spacing: 0.08em;
+  line-height: 138.5%;
+  margin: 0 0 4px 0;
+}
+
+.item-healthcare__text {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 138.5%;
+  letter-spacing: 0.08em;
+  color: #616161;
+}
+
+.item-healthcare_1::before,
+.item-healthcare_1::after {
+  content: "";
+  position: absolute;
+  background-color: #EC5863;
+  border-radius: 16px;
+}
+
+.item-healthcare_1::before {
+  height: 65px;
+  width: 65px;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  transform: rotate(-30deg);
 }
