--- a/scss/style.scss
+++ b/scss/style.scss
@@ -468,6 +468,11 @@ body{
    margin: 0 auto;
    gap: 72px;
 }
+
+.healthcare__column {
+   position: relative;
+   flex: 0 1 33%;
+}
 .healthcare__item {
    flex: 0 1 33%;
 }
@@ -481,6 +486,7 @@ body{
    align-items: center;
    padding: 36px 17px ;
    text-align: center;
+   z-index: 2;
 }
 .item-healthcare__icon {
    margin: 0 0 58px 0;
@@ -502,30 +508,54 @@ body{
    color: #616161;
 }
 
-.item-healthcare_1 {
-
-}
-.item-healthcare_1::before,
-.item-healthcare_1::after {
+.healthcare__column_1::before,
+.healthcare__column_1::after {
    content: "";
    position: absolute;
    background-color: #EC5863;
    border-radius: 16px;
 }
 
-.item-healthcare_1::before {
+.healthcare__column_1::before {
    height: 65px;
    width: 65px;
-   position: absolute;
-   left: 0;
-   bottom: 0;
+   bottom: -30px;
+   left: -20px;
    transform: rotate(-30deg);
 
 }
-.item-healthcare_2 {
+
+.healthcare__column_1::after {
+   height: 95px;
+   width: 95px;
+   top: 35px;
+   right: -55px;
+   transform: rotate(30deg);
+   border-radius: 30px;
 
 }
 
-.item-healthcare_3 {
+.healthcare__column_2::after {
+   content: "";
+   position: absolute;
+   background-color: #EC5863;
+   height: 127px;
+   width: 127px;
+   bottom: -30px;
+   right: -75px;
+   transform: rotate(-30deg);
+   border-radius: 30px;
+}
+
+.healthcare__column_3::after {
+   content: "";
+   position: absolute;
+   background-color: #EC5863;
+   height: 65px;
+   width: 65px;
+   top: -35px;
+   right: -30px;
+   transform: rotate(-30deg);
+   border-radius: 16px;
 
 }
