--- a/css/style.css
+++ b/css/style.css
@@ -91,7 +91,7 @@ body {
 }
 
 [class*=__container] {
-  max-width: 1087px;
+  max-width: 1135px;
   margin: 0 auto;
   padding: 0 15px;
 }
@@ -149,7 +149,7 @@ body {
 
 .header__container {
   display: flex;
-  min-height: 114px;
+  min-height: 115px;
   align-items: center;
 }
 
@@ -166,7 +166,7 @@ body {
 .menu {
   display: flex;
   justify-content: flex-end;
-  padding: 0 40px 0 0;
+  padding: 45px 60px 0 0;
 }
 
 .menu__list {
@@ -226,7 +226,7 @@ body {
 
 .get-started__content {
   flex: 0 1 48%;
-  padding: 0 0 0 20px;
+  padding: 30px 0 0 20px;
 }
 
 .get-started__block-text {
@@ -483,6 +483,10 @@ body {
     margin-bottom: 30px;
   }
 }
+.footer {
+  padding: 70px 0 0 0;
+}
+
 .icons-mobile {
   display: flex;
   justify-content: center;
@@ -507,7 +511,7 @@ body {
 }
 
 .healthcare__block-text {
-  margin: 0 0 45px 0;
+  margin: 80px 0 45px 0;
 }
 
 .healthcare__items {
