--- a/scss/style.scss
+++ b/scss/style.scss
@@ -20,7 +20,7 @@ body{
 }
 
 [class*="__container"]{
-   max-width: 1087px;
+   max-width: 1135px;
    margin: 0 auto;
    padding: 0 15px;
 }
@@ -82,7 +82,7 @@ body{
 }
 .header__container {
    display: flex;
-   min-height: 114px;
+   min-height: 115px;
    align-items: center;
 }
 .header__logo {
@@ -100,7 +100,7 @@ body{
 .menu {
    display: flex;
    justify-content: flex-end;
-   padding: 0 40px 0 0 ;
+   padding: 45px 60px 0 0 ;
 }
 .menu__list {
    display: flex;
@@ -160,7 +160,7 @@ body{
 
 .get-started__content {
    flex: 0 1 48%;
-   padding: 0 0 0 20px;
+   padding: 30px 0 0 20px;
 }
 .get-started__block-text {
    max-width: 410px;
@@ -428,6 +428,7 @@ body{
 }
 
 .footer {
+   padding: 70px 0 0 0;
 }
 .icons-mobile {
    display: flex;
@@ -459,7 +460,7 @@ body{
 }
 
 .healthcare__block-text {
-   margin: 0 0 45px 0;
+   margin: 80px 0 45px 0;
 }
 
 .healthcare__items {
