--- a/css/style.css
+++ b/css/style.css
@@ -250,6 +250,7 @@ body {
   color: #000000;
   margin: -10px 0 10px 0;
   letter-spacing: 0.018em;
+  flex: auto;
 }
 
 .block-text__title_blue span {
@@ -526,6 +527,8 @@ body {
 
 .healthcare__block-text {
   margin: 95px 0 70px 0;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .healthcare__items {
@@ -556,6 +559,7 @@ body {
   padding: 35px 35px;
   text-align: center;
   z-index: 2;
+  height: 100%;
 }
 
 .item-healthcare__icon {
