--- a/css/style.css
+++ b/css/style.css
@@ -197,7 +197,7 @@ body {
 }
 
 .button {
-  color: #FCFDFE;
+  color: #fcfdfe;
   height: 40px;
   width: 150px;
   left: 979px;
@@ -210,18 +210,18 @@ body {
   font-weight: 800;
   letter-spacing: 0.14em;
   text-transform: uppercase;
-  background-color: #EC5863;
+  background-color: #ec5863;
 }
 .button :hover {
   background-color: #616161;
 }
 
 .button_blue {
-  background-color: #4285F4;
+  background-color: #4285f4;
 }
 
 .get-started {
-  background-color: #FAFBFD;
+  background-color: #fafbfd;
 }
 
 .get-started__container {
@@ -254,7 +254,7 @@ body {
 }
 
 .block-text__title_blue span {
-  color: #4285F4;
+  color: #4285f4;
 }
 
 .block-text__text {
@@ -295,7 +295,7 @@ body {
   letter-spacing: 0.08em;
   text-align: left;
   font-family: Rubik;
-  color: #B0B0B0;
+  color: #b0b0b0;
 }
 
 .video-get-started__text {
@@ -343,11 +343,11 @@ body {
 }
 
 .block-text__title_pink span {
-  color: #EC5863;
+  color: #ec5863;
 }
 
 .experts {
-  background-color: #FAFBFD;
+  background-color: #fafbfd;
   padding: 110px 0 70px 0px;
 }
 
@@ -358,7 +358,7 @@ body {
 }
 
 .statistics-experts__body {
-  background-color: #FFFFFF;
+  background-color: #ffffff;
   box-shadow: 0px 2px 24px rgba(88, 126, 236, 0.15);
   border-radius: 16px;
   position: relative;
@@ -367,7 +367,7 @@ body {
 
 .statistics-experts__decor {
   position: absolute;
-  background-color: #EC5863;
+  background-color: #ec5863;
   border-radius: 30px;
 }
 
@@ -420,7 +420,7 @@ body {
   line-height: 43px;
   text-align: start;
   letter-spacing: 0.14em;
-  color: #EC5863;
+  color: #ec5863;
   padding: 0 0 5px 0;
 }
 
@@ -445,7 +445,7 @@ body {
 }
 
 .block-text__title_violet span {
-  color: #587EEC;
+  color: #587eec;
 }
 
 .experts__talk {
@@ -464,7 +464,7 @@ body {
 .experts__video {
   flex: 0 1 50%;
   width: 65%;
-  background: #FFFFFF;
+  background: #ffffff;
   box-shadow: 0px 4px 18px rgba(88, 126, 236, 0.18);
   border-radius: 8px;
   width: 520px;
@@ -550,7 +550,7 @@ body {
 
 .item-healthcare {
   position: relative;
-  background: #FFFFFF;
+  background: #ffffff;
   box-shadow: 0px 4px 18px rgba(88, 126, 236, 0.18);
   border-radius: 8px;
   display: flex;
@@ -587,7 +587,7 @@ body {
 .healthcare__column_1::after {
   content: "";
   position: absolute;
-  background-color: #EC5863;
+  background-color: #ec5863;
   border-radius: 16px;
 }
 
@@ -611,7 +611,7 @@ body {
 .healthcare__column_2::after {
   content: "";
   position: absolute;
-  background-color: #EC5863;
+  background-color: #ec5863;
   height: 127px;
   width: 127px;
   bottom: -30px;
@@ -623,7 +623,7 @@ body {
 .healthcare__column_3::after {
   content: "";
   position: absolute;
-  background-color: #EC5863;
+  background-color: #ec5863;
   height: 65px;
   width: 65px;
   top: -35px;
